--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,50 @@
+* {
+    box-sizing: border-box;
+}
+
+
 body {
     text-align: center;
+}
+
+ol {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    margin: 20px 40px;
+    padding: 0;
+}
+
+#list-item {
+    border: 3px solid black;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    justify-content: center;
+    /* padding: 10px; */
+    width: auto%;
+    height: 18vw;
+}
+#info{
+    text-align: left;
+    width: 100%;
+    font-size: 1vw;
+    width:
+}
+h4 {
+    font-size: 1.5vw;
+}
+#img-box {
+    display: flex;
+    padding: 0,5vw;
+    justify-content: center;
+    align-items: center;
+    width: inherit;
+    height: auto;
+    margin: 10px;
+}
+img {
+    width: 100%;
+    height: auto%;
 }
