--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,6 @@
     box-sizing: border-box;
 }
 
-@font-face {
-    font-family: "Chomsky";
-    src: local(./font/Chomsky.otf);
-}
-
 html {
     background-image: url(https://images.unsplash.com/photo-1587302301133-7a3aa8bbce87?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80);
     background-repeat: no-repeat;
@@ -31,12 +26,23 @@ p {
 hr {
     margin: .020vw;
 }
+
+#selectors {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 1fr 1fr;
+}
+
 select.form-select {
+    position: static;
     font-size: 1vw;
-    padding: 0.5vw;
-    width: auto;
-    margin: 1vw;
-    width: 60%;
+    padding: 0.2vw;
+    width: 90%;
+    margin: 0;
+}
+
+h4 {
+    text-align: center;
 }
 
 body {
@@ -45,7 +51,7 @@ body {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     background-color: rgba(240, 230, 140, 0);
-    background-image: linear-gradient(rgb(245, 245, 245), rgba(255, 255, 255, 0.678));
+    background-image: linear-gradient(rgb(245, 245, 245), rgba(255, 255, 255, 0.70));
 }
 
 h1 {
@@ -54,8 +60,8 @@ h1 {
     font-family: 'Suez One', serif;
     padding: 10px;
     height: auto;
-    
 }
+
 
 ol {
     display: grid;
@@ -66,7 +72,7 @@ ol {
     
 }
 
-#list-item {
+.list-item {
     border-radius: 3px;
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -75,22 +81,25 @@ ol {
     justify-content: center;
     width: auto;
     height: auto;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(121, 121, 121, 0.25);
     box-shadow: 5px 14px 29px 0px rgba(0,0,0,0.32);
+    transition: ease-out background-color 0.5s;
 }
 
 #ranking {
+    display: flex;
+    align-items: ;
     text-align: left;
     grid-column: 1/3;
     padding: 0 1vw;
-    margin: 0;
-    background-color: rgba(71, 71, 71, 0.664);
+    margin: px;
+    background-color: rgba(26, 26, 26, 0.664);
     border-radius: 3px 3px 0 0;
     color: seashell;
     font-size: 1.75vw;
 }
 
-#info{
+#info {
     text-align: left;
     width: 100%;
     font-size: .9vw;
@@ -98,23 +107,36 @@ ol {
     height: auto;
 }
 
-#img-box {
+.img-box {
     display: flex;
+    flex-direction: column;
     padding: 1vw;
     justify-content: center;
     align-items: center;
     width: 10vw;
     height: auto;
     margin: 0; 
+    transition: ease-out padding 0.3s;
 }
 
-img#book_image {
+img.book_image {
     border: 1px double #A4A4A4;
     max-width: 100%;
     height: auto;
     text-align: center;
     margin: 0;
     box-shadow: 5px 14px 29px 0px rgba(0,0,0,0.32);
+}
+
+#over {
+    padding: 0.68vw;
+    border: 5px thick rgb(245, 232, 204);
+}
+
+#card {
+    /* transition: ease-out background-color 0.5s; */
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 5px 5px 20px 11px rgba(255, 255, 255, 0.99);
 }
 
 @media only screen and (max-width: 1200px) {
@@ -126,7 +148,7 @@ img#book_image {
         font-size: 2vw;
         padding: 1vw;
         margin: 10px;
-        width: 97%;
+        width: 95%;
     }
 
     body {
@@ -189,6 +211,11 @@ img#book_image {
     h1 {
         font-size: 4vw;
         margin: 10px 20px;
+    }
+
+    #selectors {
+        display: inline;
+        grid-template-columns: 1fr 1fr;
     }
 
     select.form-select {
@@ -254,7 +281,7 @@ img#book_image {
         height: auto;
         align-self: start;
     }
-    
+
     #ranking {
         padding: 0 3vw;
         font-size: 5vw;
