--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     background-color: rgba(240, 230, 140, 0);
-    background-image: linear-gradient(ivory, rgba(255, 255, 255, 0.90));
+    background-image: linear-gradient(rgba(255, 255, 240, 0.973), rgba(255, 255, 255, 0.90));
 }
 
 h1 {
